// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: EditBounce default bounce toggle renders correctly if assigned to subaccount and feature flag is true 1`] = `
<Field
  component={[Function]}
  label={
    <Tooltip
      content="When this is set to \\"ON\\", all future transmissions for this subaccount will use xyz.com as their bounce domain (unless otherwise specified)."
      dark={true}
      id="sending-domains-edit-bounce-tooltip"
    >
      Default bounce domain 
       for Subaccount 101
      <Help
        size={15}
      />
    </Tooltip>
  }
  name="is_default_bounce_domain"
  onChange={[Function]}
  parse={[Function]}
  type="checkbox"
/>
`;

exports[`Component: EditBounce default bounce toggle renders correctly toggle when all conditions are true 1`] = `
<Field
  component={[Function]}
  label={
    <Tooltip
      content="When this is set to \\"ON\\", all future transmissions will use xyz.com as their bounce domain (unless otherwise specified)."
      dark={true}
      id="sending-domains-edit-bounce-tooltip"
    >
      Default bounce domain 
      <Help
        size={15}
      />
    </Tooltip>
  }
  name="is_default_bounce_domain"
  onChange={[Function]}
  parse={[Function]}
  type="checkbox"
/>
`;

exports[`Component: EditBounce default bounce toggle renders correctly toggle when all conditions are true except allowSubaccount 1`] = `
<Field
  component={[Function]}
  label={
    <Tooltip
      content="When this is set to \\"ON\\", all future transmissions will use xyz.com as their bounce domain (unless otherwise specified)."
      dark={true}
      id="sending-domains-edit-bounce-tooltip"
    >
      Default bounce domain 
      <Help
        size={15}
      />
    </Tooltip>
  }
  name="is_default_bounce_domain"
  onChange={[Function]}
  parse={[Function]}
  type="checkbox"
/>
`;

exports[`Component: EditBounce does not show root domain warning for 3rd level domain 1`] = `
<SendingDomainSection
  title="Set Up For Bounce"
>
  <Left>
    <SubduedText
      as="p"
      color="gray.600"
      fontSize="300"
      mt="300"
    >
      To use this domain for bounces, connect your domain by setting the required DNS record(s) and verifying the connection.
    </SubduedText>
  </Left>
  <Right>
    <Connect(BounceSetupInstructionPanel)
      domain={
        Object {
          "is_default_bounce_domain": false,
          "status": Object {
            "cname_status": null,
            "dkim_status": null,
            "mx_status": null,
            "ownership_verified": null,
          },
          "subaccount_id": 100,
        }
      }
    />
  </Right>
</SendingDomainSection>
`;

exports[`Component: EditBounce renders not ready correctly 1`] = `
<SendingDomainSection
  title="Set Up For Bounce"
>
  <Left>
    <SubduedText
      as="p"
      color="gray.600"
      fontSize="300"
      mt="300"
    >
      To use this domain for bounces, connect your domain by setting the required DNS record(s) and verifying the connection.
    </SubduedText>
  </Left>
  <Right>
    <Banner
      marginBottom="500"
      status="warning"
    >
      <p>
        We strongly recommend using a subdomain such as 
        <strong>
          bounces.
          xyz.com
        </strong>
         for bounce domains.
      </p>
      <Banner.Actions>
        <PageLink
          to="/account/sending-domains/create"
        >
          Create a new domain now.
        </PageLink>
      </Banner.Actions>
    </Banner>
    <Connect(BounceSetupInstructionPanel)
      domain={
        Object {
          "is_default_bounce_domain": false,
          "status": Object {
            "cname_status": null,
            "dkim_status": null,
            "mx_status": null,
            "ownership_verified": null,
          },
          "subaccount_id": 100,
        }
      }
    />
  </Right>
</SendingDomainSection>
`;

exports[`Component: EditBounce renders ready correctly 1`] = `
<SendingDomainSection
  title="Set Up For Bounce"
>
  <Left />
  <Right>
    <Banner
      marginBottom="500"
      status="warning"
    >
      <p>
        We strongly recommend using a subdomain such as 
        <strong>
          bounces.
          xyz.com
        </strong>
         for bounce domains.
      </p>
      <Banner.Actions>
        <PageLink
          to="/account/sending-domains/create"
        >
          Create a new domain now.
        </PageLink>
      </Banner.Actions>
    </Banner>
    <Connect(BounceSetupInstructionPanel)
      domain={
        Object {
          "status": Object {
            "cname_status": "valid",
          },
        }
      }
    />
  </Right>
</SendingDomainSection>
`;
